# Terminal_Renderer

./: CMakeLists.txt
include/: image.h  loadimage.h
include/cpucompute/: image2ascii.h
src/: loadimage.cpp
src/cpucompute/: image2ascii.cpp
tests/: main.cpp
